<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/appTitle" />
    
    <EditText
        android:id="@+id/userNameEntry"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        />
    
    <EditText
        android:id="@+id/roomNumber"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:hint="@string/room"
        />
    
    <EditText 
        android:id="@+id/toWrite"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:hint="@string/toWrite"
        />
    
    <TextView
        android:id="@+id/display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
        
    
    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendPostButton"
        android:onClick="SendPost"
        />
    
    <Button
        android:id="@+id/btnWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writeButton"
        android:onClick="writeButton"
        />

</LinearLayout>
